Fix slider overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,9 @@
     position: relative;
     top: 70px;
     scroll-behavior: smooth;
+    scroll-snap-type: y mandatory;
     overflow-y: scroll;
+    overflow-x: clip;
     scrollbar-width: none;
     &::-webkit-scrollbar {
       display: none;
@@ -21,7 +23,7 @@
 
     > * {
       width: 100vw;
-      height: calc(100vh - 70px);
+      height: 100vh;
       scroll-snap-align: start;
     }
   }
